add Google Analytics ID

--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>トライオートFXの自動売買データ比較</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54272662-18"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-54272662-18');
+  </script>
   <style>
     body{
+      margin: 0;
       color: #333;
+    }
+    header {
+      background-color: #e9ecef;
+      margin-bottom: 3rem;
+    }
+
+    h1 {
+      margin: 0 auto;
+      width: 80%;
+      max-width:  960px;
+      padding: 1rem 0;
+      font-size: 1.5rem;
     }
     main{
       width: 80%;
@@ -49,6 +71,9 @@
   </style>
 </head>
 <body>
+  <header>
+    <h1>トライオートFXの自動売買データ比較</h1>
+  </header>
   <main>
     <section id="chart">
       <h2>損益 or チャート比較</h2>
